- Fix full width nuget badge on mobile - Fix logo width on xs devices - Exclude dist folder in vs code

--- a/site/themes/academic/static/css/hugo-academic.css
+++ b/site/themes/academic/static/css/hugo-academic.css
@@ -1009,7 +1009,7 @@ nav#navbar-main li {
 
 @media screen and (max-width: 500px) {
   .navbar-brand {
-    width: 300px;
+    width: 260px;
   }
 }
 
